# crossplay

./: README.md  pyproject.toml
data/: sample_words.txt
scrabble/: __init__.py  board.py  gaddag.py  gui.py  move_gen.py  play_validate.py  score.py
tests/: test_engine.py
