[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrabble-engine"
version = "0.1.0"
description = "Scrabble move-finding engine with a tkinter GUI"
requires-python = ">=3.9"
authors = [{ name = "crossplay" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
scrabble-gui = "scrabble.gui:main"

[tool.setuptools.packages.find]
include = ["scrabble*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
